--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,10 +15,13 @@ body {
 
 .main {
   flex: 1;
+  min-height: 80vh;
 }
 
 .bg-dark {
   background-color: #12002b;
+  /* padding: 3em 0 3em; */
+  display: grid;
 }
 
 .sr-only {
@@ -57,7 +60,7 @@ body {
 }
 
 .main-nav-item:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .main-nav-logo {
@@ -171,8 +174,9 @@ body {
   background-color: white;
   width: 300px;
   margin: 0 auto;
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
   padding: 2rem;
+  margin: auto;
 }
 
 .sign-in-icon {
@@ -257,12 +261,13 @@ body {
   background-color: #00bc77;
   color: #fff;
   font-weight: bold;
-  padding: 10px;
+  padding: 10px;    
+  margin-top: 15px;
 }
 
 .header {
   color: #fff;
-  margin-bottom: 2rem;
+  margin: 2rem 0 2rem;
 }
 
 .transaction-button {
